--- a/graduatetracer/tracer/templates/tracer/admin/categorized_jobs.html
+++ b/graduatetracer/tracer/templates/tracer/admin/categorized_jobs.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/admin/template.html' %}
-
+{% block title %}Categorized Jobs{% endblock %}
 {% block content %}
 {% for category in job_category %}
   <div class="container">
