--- a/graduatetracer/tracer/templates/tracer/admin/display_announcements.html
+++ b/graduatetracer/tracer/templates/tracer/admin/display_announcements.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/admin/template.html' %}
-
+{% block title %}Display Announcements{% endblock %}
 {% load widget_tweaks %}
 
 {% block content %}
