--- a/graduatetracer/tracer/templates/tracer/admin/index.html
+++ b/graduatetracer/tracer/templates/tracer/admin/index.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/admin/template.html' %}
-
+{% block title %}Recommender System Dashboard{% endblock %}
 {% load static %}
 {% load widget_tweaks %}
 
@@ -144,7 +144,6 @@
             </div>
 
           </div>
-            {% include 'tracer/admin/chatbot.html' %}
 
 
 
