--- a/graduatetracer/tracer/templates/tracer/admin/pending.html
+++ b/graduatetracer/tracer/templates/tracer/admin/pending.html
@@ -1,4 +1,5 @@
 {%  extends 'tracer/admin/template.html' %}
+{% block title %}Pending Graduates{% endblock %}
 {% load static %}
 {% load humanize %}
 
