--- a/graduatetracer/tracer/templates/tracer/admin/userinformation.html
+++ b/graduatetracer/tracer/templates/tracer/admin/userinformation.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/admin/template.html' %}
-
+{% block title %}view User Information{% endblock %}
 {% load static %}
 {% load widget_tweaks %}
 
