--- a/graduatetracer/tracer/templates/tracer/admin/view_advertise.html
+++ b/graduatetracer/tracer/templates/tracer/admin/view_advertise.html
@@ -1,4 +1,5 @@
 {%  extends 'tracer/admin/template.html' %}
+{% block title %}View Job Advertise{% endblock %}
 {% load humanize %}
 
 {% block content %}
