--- a/graduatetracer/tracer/templates/tracer/systemadmin/announce.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/announce.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/systemadmin/templates.html' %}
-
+{% block title %}Post Announcement{% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% load widget_tweaks %}
