--- a/graduatetracer/tracer/templates/tracer/systemadmin/display_user_management.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/display_user_management.html
@@ -1,4 +1,5 @@
 {%  extends 'tracer/systemadmin/templates.html' %}
+{% block title %}Display Admin Management{% endblock %}
 {% block content %}
 
 <style media="screen">
