--- a/graduatetracer/tracer/templates/tracer/admin/announcement.html
+++ b/graduatetracer/tracer/templates/tracer/admin/announcement.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/admin/template.html' %}
-
+{% block title %}Post Announcement{% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% load widget_tweaks %}
