--- a/graduatetracer/tracer/templates/tracer/admin/approved.html
+++ b/graduatetracer/tracer/templates/tracer/admin/approved.html
@@ -1,4 +1,5 @@
 {%  extends 'tracer/admin/template.html' %}
+{% block title %}Approved Graduates{% endblock %}
 {% load static %}
 {% load humanize %}
 
