--- a/graduatetracer/tracer/templates/tracer/admin/browse.html
+++ b/graduatetracer/tracer/templates/tracer/admin/browse.html
@@ -1,7 +1,7 @@
 {%  extends 'tracer/admin/template.html' %}
+{% block title %}Browse Job Advertise{% endblock %}
 {% load static %}
 {% load humanize %}
-
 {% block content %}
 <!-- Datatables -->
 
@@ -57,10 +57,10 @@
 
 <div class="row">
   <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto m-auto pb-4">
-    <a href="#" class="btn bg-c-lite-green text-black shadow-lg" onclick="return show('Page1','Page2');">List View</a>
+    <a href="#" class="btn bg-c-lite-green text-white shadow-lg" onclick="return show('Page1','Page2');">List View</a>
   </div>
   <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto m-auto pb-4">
-    <a href="#" class="btn bg-c-lite-green text-black shadow-lg" onclick="return show('Page2','Page1');">Tile View</a>
+    <a href="#" class="btn bg-c-lite-green text-white shadow-lg" onclick="return show('Page2','Page1');">Tile View</a>
   </div>
 </div>
 
