--- a/graduatetracer/tracer/templates/tracer/admin/profile.html
+++ b/graduatetracer/tracer/templates/tracer/admin/profile.html
@@ -1,4 +1,5 @@
 {%  extends 'tracer/admin/template.html' %}
+{% block title %}SAO Profile{% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% load widget_tweaks %}
