--- a/graduatetracer/tracer/templates/tracer/systemadmin/templates.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/templates.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="{% static 'img/ctu_logo.png' %}" type="image/gif" sizes="16x16">
-    <title>Admin</title>
+    <title>{% block title %}{% endblock %}</title>
 
     <!-- Custom fonts for this template-->
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
@@ -23,8 +23,21 @@
 
     <!-- Chatbot Css -->
     <link href="{% static 'css/chatbot.css' %}" rel="stylesheet">
+
     <!-- Charts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+    <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"> -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Custom fonts for this template-->
+    <!-- <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+    <linkhref="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"rel="stylesheet"> -->
+
+    <!-- Custom styles for this template-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Chatbot Css -->
+    <link href="{% static 'css/chatbot.css' %}" rel="stylesheet">
 
 </head>
 <body id="page-top" onload="side_bar_active()">
@@ -37,10 +50,7 @@
       <!-- Main Content -->
       <div id="content">
         <!-- Topbar -->
-        <div id="navbar">
           {% include 'tracer/systemadmin/topbar.html' %}
-        </div>
-
   				<!-- End of Topbar -->
 
           <!-- Begin Page Content -->
