--- a/graduatetracer/tracer/templates/tracer/systemadmin/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/topbar.html
@@ -1,14 +1,15 @@
 {% load humanize %}
 {% load static %}
-<style>
-  .custom-badge{
-    font-size:90%;
-    top: 22px;
-  }
-</style>
 <!-- Topbar -->
-  <nav style="position: fixed; z-index: 1; top: 0; width: 100% !important; left: 0; right: 0;" class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+  <nav style="position: fixed; z-index: 1; top: 0; width: 100%; left:0; right: 0;" class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
+      <!-- Sidebar - Brand -->
+      <a class="sidebar-brand d-flex align-items-center justify-content-center sticky" href="{% url 'admindash' %}">
+        <div class="sidebar-brand-icon">
+          <img class= "w3-round" src="{% static 'img/ctu_logo.png' %}" style="width: 75px; height:70px;">
+        </div>
+        <div class="sidebar-brand-text mx-2"></div>
+      </a>
       <!-- Sidebar Toggle (Topbar) -->
       <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
           <i class="fa fa-bars"></i>
@@ -31,19 +32,19 @@
               {% else %}
                 <img class="img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
               {% endif %}
-          </a>
+            </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                   aria-labelledby="userDropdown">
 
                   <a class="dropdown-item" href="{% url 'adprof' request.user.id %}">
-                      <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                      <i class="fas fa-user fa-sm fa-fw mr-2"></i>
                       Profile
                   </a>
 
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url 'logout' %}" data-toggle="modal" data-target="#logoutModal">
-                      <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
+                      <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2"></i> Logout
                   </a>
               </div>
           </li>
