--- a/graduatetracer/tracer/templates/tracer/user/jobs_available.html
+++ b/graduatetracer/tracer/templates/tracer/user/jobs_available.html
@@ -153,7 +153,75 @@
                   {{ad.salary}}
                 {% endif %}
               </td>
-              <td class="text-center"><a href="{% url 'view_ads' ad.id %}"><i class="fas fa-eye"></i></a></td>
+              <td option-table-wid>
+                <div class="text-center pr-0">
+                  <a class  data-toggle="modal" data-target="#bd-example-modal-lg1{{ ad.id }}"><i class="fas fa-eye"></i></a>
+                </div>
+              </td>
+              <div class="modal fade" id="bd-example-modal-lg1{{ ad.id }}" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                      <div class="card-header bg-c-ads text-white">
+                        <div class="card-title h1 row pb-1">
+                          <div class="col-12 h2 pl-2 pt-1">
+                            {{ad.name}}{% if ad.job_category %} - {{ad.job_category}}{% endif %}
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <span class="col-6 text-left p text-gray-200">{{ad.address_1}}, {% if ad.address_2 %}{{ ad.address_2 }}, {% endif %}{{ ad.city }}</span>
+                          <span class="col-6 text-right p text-gray-200">Contact us: +63{{ad.phone_number}} / {{ad.email_address}}</span>
+                        </div>
+                      </div>
+                      <div class="card-body">
+                        <div class="card-title">
+                          <div class="mb-4">
+                            <span class="h4 font-weight-bold"><u>{{ad.title}} | Up to PHP{{ad.salary|intcomma}}</u></span>
+                          </div>
+                          <!-- <div class="col-sm-6 col-md-6 col-lg-6 mb-4">
+                            <span class="h5"><span class="font-weight-bold">Salary: </span>{{ad.salary}}</span>
+                          </div> -->
+                        </div>
+
+                          {% if ad.image %}
+                          <div class="row">
+                            <div class="col-sm-6 col-md-6 col-lg-6 mb-2">
+                              <div class="">
+                                <div class="h5 font-weight-bold mb-1">
+                                  Description
+                                </div>
+                                <p>{{ad.description}}</p>
+                              </div>
+                            </div>
+                            <div class="col-sm-6 col-md-6 col-lg-6 mb-2">
+                              <div class="text-center">
+                                <img class="img-fluid img-custom-border p-4" src="{{ad.image.url}}" alt="advertisement image">
+                              </div>
+                            </div>
+                          </div>
+                          {% else %}
+                          <div class="pt-2 pl-2">
+                            <div class="h5 font-weight-bold mb-1">
+                              Description
+                            </div>
+                            <p>{{ad.description}}</p>
+                          </div>
+                          {% endif %}
+                      </div>
+                      {% if ad.personal_website%}
+                      <div class="card-footer bg-white">
+                        <div class="card-title text-center ">
+                          <span>For more information and inquiries please visit our website</span>
+                            <cite class="blockquote-footer"><a href="{{ad.personal_website}}">{{ad.personal_website}}</a>
+                            </cite>
+                        </div>
+                      </div>
+                    {% endif %}
+                  </div>
+                </div>
+              </div>
           </tr>
         {% endfor %}
       </tbody>
