--- a/graduatetracer/tracer/templates/tracer/user/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/user/sidebar.html
@@ -6,8 +6,9 @@
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'DashboardUser' %}">
         <div class="sidebar-brand-icon">
-          <img class= "w3-round" src="{% static 'img/GradTracerLogo.png' %}" style="width: 85px; height:75px;">
+          <img class= "w3-round" src="{% static 'img/GradTracerLogo.png' %}" style="width: 70px; height:70px;">
         </div>
+        <div class="sidebar-brand-text mx-3">Graduate</div>
       </a>
 
       <!-- Divider -->
