friends profile and diplay user profile enhance

--- a/graduatetracer/static/css/Display.css
+++ b/graduatetracer/static/css/Display.css
@@ -2,7 +2,9 @@
 .sec-title {
     margin-bottom: 50px;
 }
-
+.card{
+    margin-top: 54px;
+}
 .pg-title {
     font-size: 24px;
     font-weight: 500;
