--- a/graduatetracer/tracer/templates/tracer/admin/userinformation.html
+++ b/graduatetracer/tracer/templates/tracer/admin/userinformation.html
@@ -1,5 +1,5 @@
 {%  extends 'tracer/admin/template.html' %}
-{% block title %}view User Information{% endblock %}
+{% block title %}View User Information{% endblock %}
 {% load static %}
 {% load widget_tweaks %}
 
@@ -70,5 +70,21 @@
       </div>
   </div>
 </div>
+
+<!-- Sweet Alert -->
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<script>
+  {% for message in messages %}
+  Swal.fire({
+    position: 'center',
+    icon: 'success',
+    title: '{{message}}',
+    showConfirmButton: false,
+    timer: 3000
+  })
+  {% endfor %}
+</script>
+
 
 {% endblock %}
