--- a/graduatetracer/tracer/templates/tracer/systemadmin/display_user_management.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/display_user_management.html
@@ -206,6 +206,9 @@
         </div>
     </div>
 </div>
+<!-- Sweet Alert -->
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <script>
   {% for message in messages %}
   Swal.fire({
@@ -217,8 +220,6 @@
   })
   {% endfor %}
 </script>
-<!-- /.container-fluid -->
-
 
 
 {% endblock %}
