--- a/graduatetracer/tracer/templates/tracer/user/about.html
+++ b/graduatetracer/tracer/templates/tracer/user/about.html
@@ -1,4 +1,5 @@
-   {% extends 'tracer/user/template.html' %}
+{% extends 'tracer/user/template.html' %}
+{% block title %}About{% endblock %}
 {% load static %}
 {% block content %}
 
