--- a/graduatetracer/tracer/templates/tracer/user/view_ads.html
+++ b/graduatetracer/tracer/templates/tracer/user/view_ads.html
@@ -1,4 +1,5 @@
 {%  extends 'tracer/user/template.html' %}
+{% block title %}View Advertise{% endblock %}
 {% load humanize %}
 
 {% block content %}
