--- a/graduatetracer/tracer/templates/tracer/user/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/user/topbar.html
@@ -7,7 +7,7 @@
     top: 22px;
   }
 </style>
-<nav class="navbar navbar-expand navbar-light bg-gradient-warning topbar mb-4 static-top shadow">
+<nav style="position: fixed; z-index: 1; width: 90%;" class="navbar topbar navbar-expand navbar-light bg-gradient-warning mb-4 static-top shadow">
 
     <!-- Sidebar Toggle (Topbar) -->
     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
