--- a/graduatetracer/tracer/templates/tracer/user/post_detail.html
+++ b/graduatetracer/tracer/templates/tracer/user/post_detail.html
@@ -12,7 +12,7 @@
 	<div class="row justify-content-center mt-3">
 		<div class="col-md-5 col-sm-12 border-bottom">
 			<p>
-				<strong>{{ post.author.firstname }} {{ post.author.lastname }}</strong> {{ post.created_on }}
+				<strong>{{ user.first_name }} {{ user.last_name }}</strong> {{ post.created_on }}
 				{% if request.user == post.author %}
 					<a href="{% url 'post-edit' post.pk %}" style="color: #333;"><i class="far fa-edit"></i></a>
 					<a href="{% url 'post-delete' post.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>
@@ -27,17 +27,13 @@
 		   		<form method="POST" action="{% url 'like' post.pk %}">
 							{% csrf_token %}
 			  		<input type="hidden" name="next" value="{{ request.path }}">
-						<button style="background-color: lightgray;color: info; border: none; box-shadow: none;" type="submit">
-				   		<i class="fas fa-thumbs-up"> <span> {{ post.likes.all.count }} </span></i>
-						</button>
+					<button class="btn default"><i class="fa fa-thumbs-up fa-lg" aria-hidden="true" type="submit"><span style="font-size: 14px"> {{ post.likes.all.count }} </span></i></button>
 		   		</form>
 
 		   		<form method="POST" action="{% url 'dislike' post.pk %}">
 							{% csrf_token %}
 				   	<input type="hidden" name="next" value="{{ request.path }}">
-						<button style="background-color: lightgray;color: info; border: none; box-shadow: none;" type="submit">
-					   <i class="fas fa-thumbs-down"> <span> {{ post.dislikes.all.count }} </span></i>
-						</button>
+						<button class="btn default"><i class="fa fa-thumbs-down fa-lg" aria-hidden="true" type="submit"><span style="font-size: 14px"> {{ post.dislikes.all.count }} </span></i></button>
 		   		</form>
 	 			</div>
 
