--- a/graduatetracer/tracer/templates/tracer/user/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/user/sidebar.html
@@ -1,5 +1,6 @@
 {% load static %}
-<ul class="navbar-nav bg-c-lite-green sidebar sidebar-dark accordion" id="accordionSidebar">
+<div class="sidebar">
+<ul style="position: sticky; top: 0; z-index: 1;" class="navbar-nav bg-c-lite-green sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="">
@@ -112,3 +113,4 @@
 
 
 </ul>
+</div>
