--- a/graduatetracer/tracer/templates/tracer/admin/advertise.html
+++ b/graduatetracer/tracer/templates/tracer/admin/advertise.html
@@ -99,11 +99,11 @@
           <div class="row mb-2">
             <div class="col-sm-12 col-md-6 col-lg-6">
               <h6 class="text-dark">Address 1</h6>
-              {% render_field ads.address_1 class="form-control" placeholder="Address 1" name="company_address_1" %}
+              {% render_field ads.address_1 class="form-control" placeholder="Current" name="company_address_1" %}
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6">
               <h6 class="text-dark">Address 2</h6>
-              {% render_field ads.address_2 class="form-control" placeholder="Address 2 - Optional" name="company_address_2" %}
+              {% render_field ads.address_2 class="form-control" placeholder="Permanent - Optional" name="company_address_2" %}
             </div>
           </div>
           <div class="row mb-2">
@@ -157,7 +157,7 @@
         </form>
       </div>
     </div>
-  
+  </div>
 <div class="card shadow-sm m-3">
   <div class="card-header bg-c-lite-green text-center text-black">
     <h2 class="card-title">Job Categories</h2>
