--- a/graduatetracer/tracer/templates/tracer/systemadmin/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/sidebar.html
@@ -1,7 +1,7 @@
 <!-- Sidebar -->
 {% load static %}
 
-<ul class="navbar-nav bg-gradient-info sidebar sidebar-dark accordion " id="accordionSidebar">
+<ul class="navbar-nav bg-gradient-info sidebar sidebar-dark accordion " id="accordionSidebar" style="position:fixed; z-index:2;">
 
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center sticky" href="{% url 'admindash' %}">
