--- a/graduatetracer/tracer/templates/tracer/systemadmin/templates.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/templates.html
@@ -42,7 +42,7 @@
   				<!-- End of Topbar -->
 
           <!-- Begin Page Content -->
-          <div class="container-fluid">
+          <div class="container-fluid" style="margin-top:100px;">
             {% block content %}
 
 
