--- a/graduatetracer/tracer/templates/tracer/user/post_detail.html
+++ b/graduatetracer/tracer/templates/tracer/user/post_detail.html
@@ -2,76 +2,119 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+
 <div class="container">
-	<div class="row mt-5">
-		<div class="col-md-5 col-sm-6">
-			<a href="{% url 'post-list' %}" class="btn btn-light">Back To Feed</a>
-		</div>
-	</div>
+	
+	<div class="card w-90 ">
 
-	<div class="row justify-content-center mt-3">
-		<div class="col-md-5 col-sm-12 border-bottom">
-			<p>
-				<strong>{{ post.author.firstname }} {{ post.author.lastname }}</strong> {{ post.created_on }}
-				{% if request.user == post.author %}
-					<a href="{% url 'post-edit' post.pk %}" style="color: #333;"><i class="far fa-edit"></i></a>
-					<a href="{% url 'post-delete' post.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>
-				{% endif %}
-			</p>
-			{% if post.image %}
- 				 		<img src="{{ post.image.url }}" class="post-image" />
- 				 		{% endif %}
-			<p>{{ post.body }}</p>
+			<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<div class="card w-100 m-auto">
+							<div class="card-body">
+								<div class="row mt-5">
+									<div class="col-md-5 col-sm-6">
+										<a href="{% url 'post-list' %}" class="btn btn-light">Back To Feed</a>
+									</div>
+								</div>
+								<div class="row justify-content-center mt-3 mb-5">
+									<div class="col-md-5 col-sm-12 border-bottom">
+										<form method="POST">
+										{% csrf_token %}
+										<h5>Are You Sure?</h5>
+										<p>You are about to delete this post, this cannot be undone.</p>
+										<div class="d-grid gap-2">
+											<button class="btn btn-danger mt-3">Delete</button>
+										</div>
+						
+									</form>
+								</div>
+							</div>	
+						</div>
+					</div>	
 
-				<div class="d-flex flex-row">
-		   		<form method="POST" action="{% url 'like' post.pk %}">
-							{% csrf_token %}
-			  		<input type="hidden" name="next" value="{{ request.path }}">
-						<button style="background-color: lightgray;color: info; border: none; box-shadow: none;" type="submit">
-				   		<i class="fas fa-thumbs-up"> <span> {{ post.likes.all.count }} </span></i>
-						</button>
-		   		</form>
-
-		   		<form method="POST" action="{% url 'dislike' post.pk %}">
-							{% csrf_token %}
-				   	<input type="hidden" name="next" value="{{ request.path }}">
-						<button style="background-color: lightgray;color: info; border: none; box-shadow: none;" type="submit">
-					   <i class="fas fa-thumbs-down"> <span> {{ post.dislikes.all.count }} </span></i>
-						</button>
-		   		</form>
-	 			</div>
-
-
-
-
-		</div>
-	</div>
-
-
-    <div class="row justify-content-center mt-3 mb-5">
-		<div class="col-md-5 col-sm-12">
-			<form method="POST">
-				{% csrf_token %}
-				{{ form | crispy }}
-				<div class="d-grid gap-2">
-					<button class="btn btn-success mt-3">Submit!</button>
 				</div>
-			</form>
-		</div>
-	</div>
-	{% for comment in comments %}
-	<div class="row justify-content-center mt-3 mb-5">
-		<div class="col-md-5 col-sm-12 border-bottom">
-			<p>
-				<strong>{{ comment.post.author.firstname }} {{ comment.post.author.lastname }}</strong> {{ comment.created_on }}
-				{% if request.user == comment.author %}
-					<a href="{% url 'comment-delete' post.pk comment.pk %}" style="color: #333;"><i class="fas fa-trash"></i>
-					</a>
-				{% endif %}
-			</p>
-	        <p>{{ comment.comment }}</p>
-		</div>
-	</div>
+			</div>
+			
+			</div>
+				<div class="row justify-content-center mt-3">
+					<div class="col-md-5 col-sm-12 border-bottom">
+						<p>
+							<strong>{{ post.author.firstname }} {{ post.author.lastname }}</strong> {{ post.created_on }}
+							{% if request.user == post.author %}
+								<a href="{% url 'post-edit' post.pk %}" style="color: #333;"><i class="far fa-edit"></i></a>
+								<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target=".bd-example-modal-lg">
+									<i class="fa fa-trash"></i> Trash</button>
+			
+			
+							{% endif %}
+						</p>
+							{% if post.image %}
+							<img src="{{ post.image.url }}" class="post-image" />
+							{% endif %}
+								<p>{{ post.body }}</p>
+							
+								<div class="d-flex flex-row">
+									<form method="POST" action="{% url 'like' post.pk %}">
+												{% csrf_token %}
+										<input type="hidden" name="next" value="{{ request.path }}">
+											<button style="background-color: lightgray;color: info; border: none; box-shadow: none;" type="submit">
+											<i class="fas fa-thumbs-up"> <span> {{ post.likes.all.count }} </span></i>
+											</button>
+									</form>
+				
+									<form method="POST" action="{% url 'dislike' post.pk %}">
+												{% csrf_token %}
+										<input type="hidden" name="next" value="{{ request.path }}">
+											<button style="background-color: lightgray;color: info; border: none; box-shadow: none;" type="submit">
+										<i class="fas fa-thumbs-down"> <span> {{ post.dislikes.all.count }} </span></i>
+											</button>
+									</form>
+								</div>
+							</div>
+						</div>
+					
+						<div class="row justify-content-center mt-3 mb-5">
+							<div class="col-md-5 col-sm-12">
+								<form method="POST">
+									{% csrf_token %}
+									{{ form | crispy }}
+									<div class="d-grid gap-2">
+										<button class="btn btn-success mt-3">Submit!</button>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+						{% for comment in comments %}
+						<div class="row justify-content-center mt-3 mb-5">
+							<div class="col-md-5 col-sm-12 border-bottom">
+								<p>
+									<strong>{{ comment.post.author.firstname }} {{ comment.post.author.lastname }}</strong> {{ comment.created_on }}
+									{% if request.user == comment.author %}
+										<a href="{% url 'comment-delete' post.pk comment.pk %}" style="color: #333;"><i class="fas fa-trash"></i>
+										</a>
+									{% endif %}
+								</p>
+								<p>{{ comment.comment }}</p>
+							</div>
+					</div>
+					
+					
 	{% endfor %}
+
 </div>
 {% endblock %}
+								
+
+			
+			
+				
+
+			
+
+		
+
+
+    
+	
