--- a/graduatetracer/tracer/templates/tracer/user/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/user/sidebar.html
@@ -28,7 +28,7 @@
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
       <a class="nav-link" id="{% url 'available_jobs' %}" href="{% url 'available_jobs' %}">
-        <i id="jobs_available_icon" class="fa fa-ad"></i>
+        <i id="jobs_available_icon" class="fas fa-ad"></i>
         <span>Jobs available</span>
       </a>
     </li>
