--- a/graduatetracer/tracer/templates/tracer/user/post_delete.html
+++ b/graduatetracer/tracer/templates/tracer/user/post_delete.html
@@ -1,12 +1,11 @@
 {% extends 'tracer/user/template.html' %}
-{% block title %}Delete Post{% endblock %}
 {% load crispy_forms_tags %}
 
 {% block content %}
 <div class="container">
 	<div class="row mt-5">
 		<div class="col-md-5 col-sm-6">
-			<a href="{% url 'post-detail' object.pk %}" class="btn btn-light">Back To Post</a>
+			<a href="{% url 'post-list' %}" class="btn btn-light">Back To Post</a>
 		</div>
 	</div>
 
