--- a/graduatetracer/tracer/templates/tracer/user/template.html
+++ b/graduatetracer/tracer/templates/tracer/user/template.html
@@ -28,6 +28,8 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://use.fontawesome.com/fe459689b4.js"></script>
+    <script src="{% static 'js/modal_comment.js' %}"></script>
 
 </head>
 
