--- a/graduatetracer/tracer/templates/tracer/admin/pending.html
+++ b/graduatetracer/tracer/templates/tracer/admin/pending.html
@@ -42,6 +42,13 @@
     .th-w-10{
       width:10% !important;
     }
+    input.form-control.form-control-sm {
+      height: calc(1.5em + 0.5rem + 2px);
+      padding: 0.25rem 0.5rem;
+      font-size: 0.875rem;
+      line-height: 1.5;
+      border-radius: 0.2rem;
+  }
   </style>
   <!-- End -->
   <div class="card-header py-3 bg-c-lite-green">
