--- a/graduatetracer/tracer/templates/tracer/user/post_list.html
+++ b/graduatetracer/tracer/templates/tracer/user/post_list.html
@@ -1,4 +1,5 @@
 {% extends 'tracer/user/template.html' %}
+{% block title %}News Feed{% endblock %}
 {% load crispy_forms_tags %}
 
 {% block content %}
