index/ sa analyticsChart

--- a/graduatetracer/tracer/templates/tracer/admin/index.html
+++ b/graduatetracer/tracer/templates/tracer/admin/index.html
@@ -135,7 +135,7 @@
                   var xValues = ["Employed","Unemployed", "Approved", "Pending"];
                   var yValues = [{{count_employed}},{{count_unemployed}},{{count_approved}},{{count_pending}}];
 
-                  var barColors = ["#1E90FF", "#FFC0CB", "#00FF7F", "#FF6347",];
+                  var barColors = ["#00FF7F","#FF6347", "#1E90FF","#FFA500" ,];
 
                   new Chart("analyticsChart", {
                     type: "bar",
