--- a/graduatetracer/tracer/templates/tracer/admin/index.html
+++ b/graduatetracer/tracer/templates/tracer/admin/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="col-xl-3 col-md-6 mb-4">
-            <div class="card border-left-warning shadow-sm h-100 py-2">
+            <div class="card border-left-primary shadow-sm h-100 py-2">
                 <div class="card-body">
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
