--- a/graduatetracer/tracer/templates/tracer/systemadmin/adprof.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/adprof.html
@@ -19,7 +19,7 @@
         <div class="row mb-4">
           <div class="col-lg-5 mt-4 mb-4">
             <div class="col-lg-12 mt-4 image-field">
-                {% if grad_info.profile_picture %}
+                {% if user.profile_picture %}
                   <img class="img-custom-border" src="{{request.user.profile_picture.url}}" id="photo">
                 {% else %}
                   <img class="img-fluid img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
@@ -59,4 +59,20 @@
 </div>
 
 <script src="{% static '/js/profile.js' %}"></script>
+<script src="{% static '/js/profile.js' %}"></script>
+<!-- Sweet Alert -->
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<script>
+  {% for message in messages %}
+  Swal.fire({
+    position: 'center',
+    icon: 'success',
+    title: '{{message}}',
+    showConfirmButton: false,
+    timer: 3000
+  })
+  {% endfor %}
+</script>
+
 {% endblock content %}
