--- a/graduatetracer/tracer/templates/tracer/admin/index.html
+++ b/graduatetracer/tracer/templates/tracer/admin/index.html
@@ -148,7 +148,20 @@
 
 
 
+          <!-- Sweet Alert -->
+          <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+          <script>
+            {% for message in messages %}
+            Swal.fire({
+              position: 'center',
+              icon: 'success',
+              title: '{{message}}',
+              showConfirmButton: false,
+              timer: 3000
+            })
+            {% endfor %}
+          </script>
 
 
 {% endblock %}
